--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
-                Github
+                Live
               </button>
               
             </div>
